# codegen

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  GitVersion.yml  License  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt  sonar-project.properties
.github/: stale.yml
.github/workflows/: codeql.yml  deploy.yml  integration.yml
assets/: index.md
configs/: config.yml
metadata/: columns_descriptions.csv  dataset_info.md  schemas.txt
src/: Home.py  main.py
src/bq_manager/: query.py
src/chat_manager/: chatbot.py
src/config_manager/: manager.py
src/looker_manager/: look.py
src/pages/: 1_Business_Analyst.py  2_Data_Analyst.py  3_Data_Catalogue.py
src/prompt_manager/: task_prompts.py
src/query_formatter/: formatter.py
src/schema_manager/: schema.py
src/secret_manager/: secrets.py
src/utils/: utils.py
tests/: test_bq_manager.py  test_config_manager.py  test_llm_manager.py  test_query_format.py  test_schema_manager.py  test_secret_manager.py
tests/tests/: test_chat_manager.py
