[project]
name = "codegen"
dynamic = ["version"]
authors = [
  { name="Karan Rampal", email="karanrampal87@gmail.com" },
]
description = "A project for using LLM for SQL generation"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "db-dtypes==1.2.0",
    "google-cloud-aiplatform==1.52.0",
    "google-cloud-bigquery==3.23.1",
    "google-cloud-secret-manager==2.20.0",
    "looker_sdk==24.8.0",
    "matplotlib==3.8.4",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "pyyaml==6.0.1",
    "streamlit==1.36.0",
    "tabulate==0.9.0",
    "tqdm==4.66.4",
]

[project.urls]
"Homepage" = "https://github.com/karanrampal/codegen"
"Bug Tracker" = "https://github.com/karanrampal/codegen/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.mypy]
show_error_codes = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disable_error_code = ["attr-defined"]

[tool.pylint."MASTER"]
ignore = [".ipynb_checkpoints"]

[tool.pylint."TYPECHECK"]
generated-members = ["config_manager"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 100
